--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -5,5 +5,6 @@
 @using Wolmart.Ecommerce.ViewModels.HomeViewModels 
 @using Wolmart.Ecommerce.ViewModels.AccountViewModels
 @using Wolmart.Ecommerce.ViewModels.OrderViewModels
+@using Wolmart.Ecommerce.ViewModels.ProductViewModels
 @using Wolmart.Ecommerce.ViewModels
 
