Created feedback controller in admin area

--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -259,6 +259,12 @@
                                 <span class="nav-menu-item-title">Category</span>
                             </a>
                         </li>
+                         <li class="nav-menu-item">
+                            <a asp-controller="feedback" asp-action="index">
+                                <i class="fa-regular fa-comment"></i>
+                                <span class="nav-menu-item-title">Feedback</span>
+                            </a>
+                        </li>
                         <li class="nav-menu-item">
                             <a asp-controller="user" asp-action="index">
                                 <i class="fa-regular fa-user"></i>
