Updated product controller

--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -285,7 +285,7 @@
                                         <a href="#product-tab-vendor" class="nav-link">Vendor Info</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#product-tab-reviews" class="nav-link">Customer Reviews (3)</a>
+                                        <a href="#product-tab-reviews"  class="nav-link">Customer Reviews (3)</a>
                                     </li>
                                 </ul>
                                 <div class="tab-content">
@@ -521,7 +521,7 @@
                                                         Review</h3>
                                                     <p class="mb-3">Your email address will not be published. Required
                                                         fields are marked *</p>
-                                                    <form asp-controller="product" asp-action="feedback" asp-route-ProductID="@Model.Product.ID" method="POST" class="review-form">
+                                                    <form asp-controller="product" asp-action="feedback" asp-route-ProductID="@Model.Product.ID" method="POST" class="review-form" enctype="multipart/form-data">
                                                        @* <div class="rating-form">
                                                             <label for="rating">Your Rating Of This Product :</label>
                                                             <span class="rating-stars">
@@ -572,67 +572,18 @@
                                             <div class="tab-content">
                                                 <div class="tab-pane active" id="show-all">
                                                     <ul class="comments list-style-none">
-                                                        <li class="comment">
+                                                        @foreach (Feedback item in Model.Feedbacks.Where(f=>!f.IsDeleted))
+                                                        {
+                                                           <li class="comment">
                                                             <div class="comment-body">
                                                                 <figure class="comment-avatar">
-                                                                    <img src="~/assets/images/agents/1-100x100.png"
+                                                                    <img src="~/assets/images/demos/@item.Image"
                                                                         alt="Commenter Avatar" width="90" height="90">
                                                                 </figure>
                                                                 <div class="comment-content">
                                                                     <h4 class="comment-author">
-                                                                        <a href="#">John Doe</a>
-                                                                        <span class="comment-date">March 22, 2021 at
-                                                                            1:54 pm</span>
-                                                                    </h4>
-                                                                    <div class="ratings-container comment-rating">
-                                                                        <div class="ratings-full">
-                                                                            <span class="ratings"
-                                                                                style="width: 60%;"></span>
-                                                                            <span
-                                                                                class="tooltiptext tooltip-top"></span>
-                                                                        </div>
-                                                                    </div>
-                                                                    <p>pellentesque habitant morbi tristique senectus
-                                                                        et. In dictum non consectetur a erat.
-                                                                        Nunc ultrices eros in cursus turpis massa
-                                                                        tincidunt ante in nibh mauris cursus mattis.
-                                                                        Cras ornare arcu dui vivamus arcu felis bibendum
-                                                                        ut tristique.</p>
-                                                                    <div class="comment-action">
-                                                                        <a href="#"
-                                                                            class="btn btn-secondary btn-link btn-underline sm btn-icon-left font-weight-normal text-capitalize">
-                                                                            <i class="far fa-thumbs-up"></i>Helpful (1)
-                                                                        </a>
-                                                                        <a href="#"
-                                                                            class="btn btn-dark btn-link btn-underline sm btn-icon-left font-weight-normal text-capitalize">
-                                                                            <i class="far fa-thumbs-down"></i>Unhelpful
-                                                                            (0)
-                                                                        </a>
-                                                                        <div class="review-image">
-                                                                            <a href="#">
-                                                                                <figure>
-                                                                                    <img src="~/assets/images/products/default/review-img-1.jpg"
-                                                                                        width="60" height="60"
-                                                                                        alt="Attachment image of John Doe's review on Electronics Black Wrist Watch"
-                                                                                        data-zoom-image="~/assets/images/products/default/review-img-1-800x900.jpg" />
-                                                                                </figure>
-                                                                            </a>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </li>
-                                                        <li class="comment">
-                                                            <div class="comment-body">
-                                                                <figure class="comment-avatar">
-                                                                    <img src="~/assets/images/agents/2-100x100.png"
-                                                                        alt="Commenter Avatar" width="90" height="90">
-                                                                </figure>
-                                                                <div class="comment-content">
-                                                                    <h4 class="comment-author">
-                                                                        <a href="#">John Doe</a>
-                                                                        <span class="comment-date">March 22, 2021 at
-                                                                            1:52 pm</span>
+                                                                        <a href="#">@item.Firstname @item.Lastname</a>
+                                                                        <span class="comment-date">@item.CreatedAt?.ToString("MMM dd yyyy")</span>
                                                                     </h4>
                                                                     <div class="ratings-container comment-rating">
                                                                         <div class="ratings-full">
@@ -642,84 +593,34 @@
                                                                                 class="tooltiptext tooltip-top"></span>
                                                                         </div>
                                                                     </div>
-                                                                    <p>Nullam a magna porttitor, dictum risus nec,
-                                                                        faucibus sapien.
-                                                                        Ultrices eros in cursus turpis massa tincidunt
-                                                                        ante in nibh mauris cursus mattis.
-                                                                        Cras ornare arcu dui vivamus arcu felis bibendum
-                                                                        ut tristique.</p>
+                                                                    <p>@item.Text</p>
                                                                     <div class="comment-action">
                                                                         <a href="#"
                                                                             class="btn btn-secondary btn-link btn-underline sm btn-icon-left font-weight-normal text-capitalize">
                                                                             <i class="far fa-thumbs-up"></i>Helpful (1)
                                                                         </a>
-                                                                        <a href="#"
+                                                                        <a href="#"             
                                                                             class="btn btn-dark btn-link btn-underline sm btn-icon-left font-weight-normal text-capitalize">
                                                                             <i class="far fa-thumbs-down"></i>Unhelpful
                                                                             (0)
                                                                         </a>
-                                                                        <div class="review-image">
-                                                                            <a href="#">
-                                                                                <figure>
-                                                                                    <img src="~/assets/images/products/default/review-img-2.jpg"
-                                                                                        width="60" height="60"
-                                                                                        alt="Attachment image of John Doe's review on Electronics Black Wrist Watch"
-                                                                                        data-zoom-image="~/assets/images/products/default/review-img-2.jpg" />
-                                                                                </figure>
-                                                                            </a>
-                                                                            <a href="#">
-                                                                                <figure>
-                                                                                    <img src="~/assets/images/products/default/review-img-3.jpg"
-                                                                                        width="60" height="60"
-                                                                                        alt="Attachment image of John Doe's review on Electronics Black Wrist Watch"
-                                                                                        data-zoom-image="~/assets/images/products/default/review-img-3.jpg" />
-                                                                                </figure>
-                                                                            </a>
-                                                                        </div>
+                                                                        @foreach (FeedbackImage feedbackImage in Model.FeedbackImages)
+                                                                        {
+                                                                              <div class="review-image">
+                                                                                <a href="#">
+                                                                                    <figure class="product-image">
+                                                                                        <img src="~/assets/images/feedback/@feedbackImage.Image"
+                                                                                            data-zoom-image="~/assets/images/feedback/@feedbackImage.Image"
+                                                                                            alt="Electronics Black Wrist Watch" width="800" height="900">
+                                                                                    </figure>
+                                                                                </a>
+                                                                            </div>
+                                                                        }
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                         </li>
-                                                        <li class="comment">
-                                                            <div class="comment-body">
-                                                                <figure class="comment-avatar">
-                                                                    <img src="~/assets/images/agents/3-100x100.png"
-                                                                        alt="Commenter Avatar" width="90" height="90">
-                                                                </figure>
-                                                                <div class="comment-content">
-                                                                    <h4 class="comment-author">
-                                                                        <a href="#">John Doe</a>
-                                                                        <span class="comment-date">March 22, 2021 at
-                                                                            1:21 pm</span>
-                                                                    </h4>
-                                                                    <div class="ratings-container comment-rating">
-                                                                        <div class="ratings-full">
-                                                                            <span class="ratings"
-                                                                                style="width: 60%;"></span>
-                                                                            <span
-                                                                                class="tooltiptext tooltip-top"></span>
-                                                                        </div>
-                                                                    </div>
-                                                                    <p>In fermentum et sollicitudin ac orci phasellus. A
-                                                                        condimentum vitae
-                                                                        sapien pellentesque habitant morbi tristique
-                                                                        senectus et. In dictum
-                                                                        non consectetur a erat. Nunc scelerisque viverra
-                                                                        mauris in aliquam sem fringilla.</p>
-                                                                    <div class="comment-action">
-                                                                        <a href="#"
-                                                                            class="btn btn-secondary btn-link btn-underline sm btn-icon-left font-weight-normal text-capitalize">
-                                                                            <i class="far fa-thumbs-up"></i>Helpful (0)
-                                                                        </a>
-                                                                        <a href="#"
-                                                                            class="btn btn-dark btn-link btn-underline sm btn-icon-left font-weight-normal text-capitalize">
-                                                                            <i class="far fa-thumbs-down"></i>Unhelpful
-                                                                            (1)
-                                                                        </a>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </li>
+                                                        }
                                                     </ul>
                                                 </div>
                                                 <div class="tab-pane" id="helpful-positive">
