--- a/Views/Shared/_ProductFeedbackPartial.cshtml
+++ b/Views/Shared/_ProductFeedbackPartial.cshtml
@@ -9,6 +9,7 @@
                                                             placeholder="Write Your Review Here..." class="form-control"
                                                             id="review">
                                                         </textarea>
+                                                        <input multiple asp-for="Files"/>
                                                        @* <div class="row gutter-md">
                                                             <div class="col-md-6">
                                                                 <input asp-for="Text" class="form-control"
