--- a/Views/Shared/_ProductFeedbackPartial.cshtml
+++ b/Views/Shared/_ProductFeedbackPartial.cshtml
@@ -1,28 +1,28 @@
 ﻿@model Feedback
 
 @{
-    ViewData["Title"] = "View";
+ViewData["Title"] = "View";
 }
 
-
-                                                        <textarea cols="30" rows="6" asp-for="Text" 
-                                                            placeholder="Write Your Review Here..." class="form-control"
-                                                            id="review">
+<div class="rating-form">
+   <label for="rating">Your Rating Of This Product :</label>
+   <span class="rating-stars text-danger">
+        <i class="ratingStar fas fa-star" data-value="1"></i>
+        <i class="ratingStar far fa-star" data-value="2"></i>
+        <i class="ratingStar far fa-star" data-value="3"></i>
+        <i class="ratingStar far fa-star" data-value="4"></i>
+        <i class="ratingStar far fa-star" data-value="5"></i>
+   </span>
+   <input type="hidden" name="Rating" id="ratingValue" value="1"/>
+</div>
+<textarea cols="30" rows="6" asp-for="Text" 
+   placeholder="Write Your Review Here..." class="form-control"
+   id="review">
                                                         </textarea>
-                                                        <input multiple asp-for="Files"/>
-                                                       @* <div class="row gutter-md">
-                                                            <div class="col-md-6">
-                                                                <input asp-for="Text" class="form-control"
-                                                                    placeholder="Your Name" id="author">
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <input asp-for="Text" class="form-control"
-                                                                    placeholder="Your Email" id="email_1">
-                                                            </div>
-                                                        </div>*@
-                                                        <div class="form-group">
-                                                            <input type="checkbox" class="custom-checkbox"
-                                                                id="save-checkbox">
-                                                            <label for="save-checkbox">Save my name, email, and website
-                                                                in this browser for the next time I comment.</label>
-                                                        </div>
+<input multiple asp-for="Files"/>
+<div class="form-group">
+   <input type="checkbox" class="custom-checkbox"
+      id="save-checkbox">
+   <label for="save-checkbox">Save my name, email, and website
+   in this browser for the next time I comment.</label>
+</div>
