Updated product controller & shop images

--- a/Views/Product/Page.cshtml
+++ b/Views/Product/Page.cshtml
@@ -1,7 +1,6 @@
 ﻿@model List<Product>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Page";
 }
 
 @await Component.InvokeAsync("Product",Model)
